# equity-algo-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  frontend.yml
config/: nse_holidays.json  settings.py
docs/: ARCHITECTURE.md  RUNNING_LOCALLY.md  architecture.dot  classes.dot  deployment.dot  schema.dot
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AttributionTable.tsx  CandleChart.tsx  ClosedTradesTable.tsx  EquityChart.tsx  PositionsTable.tsx  StrategyPnlTable.tsx  SummaryCards.tsx  TradesTable.tsx
frontend/lib/: api.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_fills.py
scripts/: algo.py  backfill.py  backtest.py  dashboard.py  optimize.py  paper_trade.py  refresh_token.py  rotation_backtest.py
src/algotrading/: __init__.py  cli.py  engine.py
tests/: test_cli.py  test_package_layout.py  test_settings.py
tests/api/: test_app.py  test_service.py
tests/backtest/: test_benchmark.py  test_costs.py  test_execution_model.py  test_metrics.py  test_montecarlo.py  test_optimize.py  test_replay.py  test_report.py  test_rotation.py  test_simulator.py
tests/broker/: conftest.py  test_auth.py  test_client.py  test_throttle.py  test_token_store.py
tests/data/: conftest.py  test_backfill.py  test_calendar.py  test_chunks.py  test_mappers.py  (+3 more)
(+80 files in other folders)
